0.49
    * Failure diagnostics now come out on their own line when run in 
      Test::Harness.
    - eq_set() sometimes wasn't giving the right results if nested refs 
      were involved [rt.cpan.org 3747]
    - isnt() giving wrong diagnostics and warning if given any undefs.
    * Give unlike() the right prototype [rt.cpan.org 4944]
    - Change from CVS to Aegis

0.48_02  * UNRELEASED *
    - Mentioning Test::Differences, Test::Deep and Bundle::Test.
    - Removed dependency on File::Spec.
    - Fixing the grammar of diagnostic outputs when only a single test
      is run or failed (ie. "Looks like you failed 1 tests").
      [Darren Chamberlain]

0.48_01  Mon Nov 11 02:36:43 EST 2002
    - Mention Test::Class in Test::More's SEE ALSO
    * use_ok() now DWIM for version checks
    - More problems with ithreads fixed.
    * Test::Harness upgrade no longer optional.  It was causing too
      many problems when the T::H upgrade didn't work.
    * Drew Taylor added a 'no_diag' option to Test::More to switch
      off all diag() statements.
    * Test::Builder/More no longer automatically loads threads.pm
      when threads are enabled.  The user must now do this manually.
    * Alex Francis added reset() reset the state of Test::Builder in 
      persistent environments.
    - David Hand noted that Test::Builder/More exit code behavior was
      not documented.  Only Test::Simple.

0.47  Mon Aug 26 03:54:22 PDT 2002 
    * Tatsuhiko Miyagawa noticed Test::Builder was accidentally storing 
      objects passed into test functions causing problems with tests 
      relying on object destruction.
    - Added example of calculating the number of tests to Test::Tutorial
    - Peter Scott made the ending logic not fire on child processes when
      forking.
    * Test::Builder is once again ithread safe.

0.46  Sat Jul 20 19:57:40 EDT 2002
    - Noted eq_set() isn't really a set comparision.
    - Test fix, exit codes are broken on MacPerl (bleadperl@16868)